<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">RetroPlay</string>
    <string name="default_web_client_id">583642395601-2gu1tvl877i1dtdcpvt5ci0j75ood0gl.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open" tools:ignore="MissingTranslation">Open Navigation Drawer</string>
    <string name="navigation_drawer_close" tools:ignore="MissingTranslation">Close Navigation Drawer</string>

    <!-- Juegos ViewHolder -->
    <string name="jugar" tools:ignore="ExtraTranslation">Play</string>

    <!-- Login fragment -->
    <string name="registro">SIGN UP</string>
    <string name="iniciasesion" tools:ignore="MissingTranslation">SIGN IN</string>
    <string name="correoElectronico" tools:ignore="ExtraTranslation">Email</string>
    <string name="contraseña" tools:ignore="ExtraTranslation,MissingTranslation">Password</string>
    <string name="iniciarSesion" tools:ignore="ExtraTranslation">Login</string>
    <string name="irRegistro" tools:ignore="ExtraTranslation">Don\'t have an account yet? Sign up here!!</string>
    <string name="iniciandosesion" tools:ignore="ExtraTranslation,MissingTranslation">Login...</string>


    <!-- Registro fragment -->
    <string name="registrate" tools:ignore="ExtraTranslation">REGISTER</string>
    <string name="nombreUsuario" tools:ignore="ExtraTranslation">User name</string>
    <string name="confirmarPassword" tools:ignore="ExtraTranslation">Repeat password</string>
    <string name="fotoPerfil" tools:ignore="ExtraTranslation">Choose a profile picture</string>
    <string name="registrarse" tools:ignore="ExtraTranslation">Register</string>
    <string name="registrando" tools:ignore="ExtraTranslation">Registering user...</string>


    <!-- Bottom menu -->
    <string name="juegos" tools:ignore="ExtraTranslation,MissingTranslation">Games</string>
    <string name="favoritos" tools:ignore="ExtraTranslation,MissingTranslation">Favorites</string>
    <string name="ranking" tools:ignore="ExtraTranslation,MissingTranslation">Ranking</string>
    <string name="logros" tools:ignore="ExtraTranslation,MissingTranslation">Achievements</string>

    <!-- Actualiar usuario fragment -->
    <string name="actualizarUsuario" tools:ignore="ExtraTranslation,MissingTranslation">Update user</string>
    <string name="actualizar" tools:ignore="ExtraTranslation,MissingTranslation">Update</string>
    <string name="cambiarImagen" tools:ignore="ExtraTranslation,MissingTranslation">Change profile picture</string>
    <string name="passwordAntigua" tools:ignore="ExtraTranslation,MissingTranslation">Enter the old password</string>
    <string name="passwordNueva" tools:ignore="ExtraTranslation,MissingTranslation">Enter a new password</string>
    <string name="passwordActual" translatable="false" tools:ignore="ExtraTranslation">Current password</string>
    <string name="actualizandoUsuario" translatable="false" tools:ignore="ExtraTranslation">Updating user...</string>


    <!-- Cerrar sesion fragment -->
    <string name="cerrarsesion" tools:ignore="ExtraTranslation,MissingTranslation">Log out</string>
    <string name="cerrarSesion" tools:ignore="ExtraTranslation,MissingTranslation">Do you want to log out?</string>
    <string name="si" tools:ignore="ExtraTranslation,MissingTranslation">Yes</string>
    <string name="no" tools:ignore="ExtraTranslation,MissingTranslation">No</string>

    <!-- Detalle fragment -->
    <string name="detalle" tools:ignore="ExtraTranslation,MissingTranslation">Detail</string>

    <!-- Fragment Ranking -->
    <string name="elegirJuego" tools:ignore="ExtraTranslation,MissingTranslation">Choose Game</string>
    <string name="ningunJuego" tools:ignore="ExtraTranslation,MissingTranslation">No game chosen</string>
    <string name="jugador" tools:ignore="ExtraTranslation,MissingTranslation">PLAYER</string>
    <string name="puntuacion" tools:ignore="ExtraTranslation,MissingTranslation">SCORE</string>
    <string name="posicion" tools:ignore="ExtraTranslation,MissingTranslation">POSITION</string>



</resources>