<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_menu_nav"
    app:startDestination="@id/juegosFragment">

    <fragment
        android:id="@+id/juegosFragment"
        android:name="com.example.retroplay.JuegosFragment"
        android:label="@string/juegos"
        tools:layout="@layout/fragment_juegos" >
        <action
            android:id="@+id/action_juegosFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_juegosFragment_to_jugarJuegoFragment"
            app:destination="@id/jugarJuegoFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoritosFragment"
        android:name="com.example.retroplay.FavoritosFragment"
        android:label="@string/favoritos"
        tools:layout="@layout/fragment_favoritos" >
        <action
            android:id="@+id/action_favoritosFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_favoritosFragment_to_jugarJuegoFragment"
            app:destination="@id/jugarJuegoFragment" />
    </fragment>
    <fragment
        android:id="@+id/rankingFragment"
        android:name="com.example.retroplay.RankingFragment"
        android:label="@string/ranking"
        tools:layout="@layout/fragment_ranking" />
    <fragment
        android:id="@+id/logrosFragment"
        android:name="com.example.retroplay.LogrosFragment"
        android:label="@string/logros"
        tools:layout="@layout/fragment_logros" />

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.retroplay.DetailFragment"
        android:label="@string/detalle"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment_to_jugarJuegoFragment"
            app:destination="@id/jugarJuegoFragment" />
    </fragment>
    <fragment
        android:id="@+id/jugarJuegoFragment"
        android:name="com.example.retroplay.JugarJuegoFragment"
        android:label="JugarJuegoFragment" />
    <fragment
        android:id="@+id/registroFragment"
        android:name="com.example.retroplay.Registro.RegistroFragment"
        android:label="RegistroFragment" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.retroplay.Registro.LoginFragment"
        android:label="LoginFragment" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.retroplay.MainActivity"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
    <activity
        android:id="@+id/registroActivity"
        android:name="com.example.retroplay.Registro.RegistroActivity"
        android:label="fragment_registro"
        tools:layout="@layout/fragment_registro" />
    <fragment
        android:id="@+id/cerrarSesionFragment"
        android:name="com.example.retroplay.CerrarSesionFragment"
        android:label="@string/cerrarsesion"
        tools:layout="@layout/fragment_cerrar_sesion" >
        <action
            android:id="@+id/action_cerrarSesionFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/actualizarUsuarioFragment"
        android:name="com.example.retroplay.ActualizarUsuarioFragment"
        android:label="@string/actualizarUsuario"
        tools:layout="@layout/fragment_actualizar_usuario" />
</navigation>