<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_medio_oscuro"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".ActualizarUsuarioFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@android:color/transparent"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/actualizarUsuario"
            android:textColor="@color/azul"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="3dp"
            android:background="@drawable/rounded_background"
            android:shadowColor="@color/azul"
            android:shadowDx="0"
            android:shadowDy="40"
            android:shadowRadius="25"/>
    </androidx.cardview.widget.CardView>

    <!-- Nombre de Usuario -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/MyOutlinedTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/borde_gris"
        android:layout_marginBottom="10dp"
        app:cursorColor="@color/azul"
        app:hintTextColor="@color/azul"
        android:textColorHint="@color/textoLoginRegister"
        app:boxBackgroundColor="@color/gris"
        android:hint="@string/nombreUsuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textoNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:cursorColor="@color/azul"
            android:padding="20dp"
            android:textCursorDrawable="@drawable/cursor_azul"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/MyOutlinedTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/borde_gris"
        android:layout_marginBottom="10dp"
        app:cursorColor="@color/azul"
        app:hintTextColor="@color/azul"
        android:textColorHint="@color/textoLoginRegister"
        app:boxBackgroundColor="@color/gris"
        android:hint="@string/correoElectronico">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textoEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:cursorColor="@color/azul"
            android:padding="20dp"
            android:textCursorDrawable="@drawable/cursor_azul"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/MyOutlinedTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/borde_gris"
        android:layout_marginBottom="10dp"
        app:cursorColor="@color/azul"
        app:hintTextColor="@color/azul"
        android:textColorHint="@color/textoLoginRegister"
        app:boxBackgroundColor="@color/gris"
        android:hint="@string/passwordActual">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textoPasswordAntigua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:cursorColor="@color/azul"
            android:padding="20dp"
            android:textCursorDrawable="@drawable/cursor_azul"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Repetir Contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/MyOutlinedTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/borde_gris"
        android:layout_marginBottom="10dp"
        app:cursorColor="@color/azul"
        app:hintTextColor="@color/azul"
        android:textColorHint="@color/textoLoginRegister"
        app:boxBackgroundColor="@color/gris"
        android:hint="@string/passwordNueva">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textoPasswordNueva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:cursorColor="@color/azul"
            android:padding="20dp"
            android:textCursorDrawable="@drawable/cursor_azul"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Imagen de Perfil -->
    <ImageView
        android:id="@+id/imagen"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:background="@drawable/circle_background"
        android:contentDescription="Imagen de perfil"
        android:layout_marginBottom="10dp"/>

    <!-- Botón para subir imagen -->
    <Button
        android:id="@+id/btnSubirImagenPerfil"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cambiarImagen"
        app:strokeColor="@color/azul"
        app:strokeWidth="1dp"
        android:textColor="@color/azul"
        app:cornerRadius="8dp"
        android:layout_marginBottom="10dp"/>

    <!-- Botón de Registro -->
    <Button
        android:id="@+id/btnRegistrarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar"
        android:backgroundTint="@color/azul"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        app:cornerRadius="8dp"/>

</LinearLayout>