<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/gris_medio_oscuro"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@android:color/transparent"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/iniciasesion"
            android:textColor="@color/azul"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="3dp"
            android:background="@drawable/rounded_background"
            android:shadowColor="@color/azul"
            android:shadowDx="0"
            android:shadowDy="40"
            android:shadowRadius="25"/>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/MyOutlinedTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/borde_gris"
        android:layout_marginBottom="10dp"
        app:hintTextColor="@color/azul"
        app:cursorColor="@color/azul"
        android:textColorHint="@color/textoLoginRegister"
        app:boxBackgroundColor="@color/gris"
        android:hint="@string/correoElectronico">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/azul"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:padding="20dp"
            android:textCursorDrawable="@drawable/cursor_azul" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/MyOutlinedTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/borde_gris"
        android:layout_marginBottom="10dp"
        app:hintTextColor="@color/azul"
        app:cursorColor="@color/azul"
        android:textColorHint="@color/textoLoginRegister"
        app:boxBackgroundColor="@color/gris"
        android:hint="@string/contraseña">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cursorColor="@color/azul"
            android:inputType="textPassword"
            android:textColorHint="@color/azul"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:padding="20dp"
            android:textCursorDrawable="@drawable/cursor_azul"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciarSesion"
        android:backgroundTint="@color/azul"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:cornerRadius="8dp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/irRegistro"
        android:textColor="@color/azul"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"/>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintBottom_toBottomOf="parent"/>
</LinearLayout>
