<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="?attr/actionBarSize"
    android:padding="16dp"
    android:background="@color/gris_medio_oscuro"
    tools:context=".MainActivity">

    <!-- Título "Elegir Juego" -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elegirJuego"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp"/>

    <!-- Spinner para seleccionar juego -->
    <Spinner
        android:id="@+id/spinnerJuegos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomSpinner"
        android:spinnerMode="dropdown"
        android:dropDownWidth="match_parent"
        android:dropDownVerticalOffset="4dp"
        android:layout_marginBottom="24dp"/>

    <!-- Título del juego seleccionado -->
    <TextView
        android:id="@+id/tvTituloJuego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ningunJuego"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <!-- Tabla de puntuaciones -->
    <TableLayout
        android:id="@+id/tablaPuntuaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:shrinkColumns="*"
        android:background="@drawable/rounded_corners"> <!-- Aquí aplicas el fondo redondeado -->

        <!-- Encabezados de la tabla -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DDDDDD">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/posicion"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:padding="8dp"/>


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/jugador"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:padding="8dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/puntuacion"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:padding="8dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/posicion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/nombreJugador"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Ejemplo"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/puntuacionJugador"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="170"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="8dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EEEEEE"/>
    </TableLayout>
</LinearLayout>